# api_chatbot_demo

./: .env-template  .gitignore  README.md  chatbot.py  pyproject.toml  requirements.txt  setup.py  utils.py
interfaces/: Home.py
interfaces/pages/: 1_🤖_RAG_YOU_Chatbot.py  2_📃_YDC_Docs_Chatbot.py  3_YDC_Docs_Chatbot.py
interfaces/sample_pages/: 1_🤖_Chatbot.py  2_👾_Python_Agent.py
notebooks/: start_here.ipynb
src/api_chatbot_demo/ai/: agents.py  dataloaders.py  prompts.py
src/api_chatbot_demo/streamlit/: llm_blocks.py  utils.py
tests/: test_installation.py
tests/ai/: test_agents.py  test_chains.py
tests/streamlit/: simple_interface.py
